# pumnum

./: .gitignore  README.md  __init__.py  pyproject.toml
notebooks/: example.ipynb  tutorial.ipynb
notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb  tutorial-checkpoint.ipynb
pumba/: main.py
pumnum/: main.py  pumnum.py
pumnum/.ipynb_checkpoints/: pumnum-checkpoint.py
src/: backends.py  pumnum.py
src/pumnum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parallel.py
tests/.ipynb_checkpoints/: test_parallel-checkpoint.py
